Added Bio with resolution features

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Isaak Henry</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer src = "landing.js"></script>
   </head>
   <body>
     <main>
       <nav>
         <div class="navbar">
           <ul class="menu">
-            <li><a href="#About">About</a></li>
+            <li><a href="#About">About Me</a></li>
             <li><a href="#PreviousWork">Previous Work</a></li>
             <li><a href="#Projects">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
         </div>
       </nav>
-      <section id="About">AboutTest</section>
+      <section id="About"></section>
       <section id="PreviousWork">PreviousTest</section>
       <section id="Projects">ProjectsTest</section>
       <section id="Contact">Contact</section>
