Added accordion menus

--- a/index.html
+++ b/index.html
@@ -20,7 +20,29 @@
         </div>
       </nav>
       <section id="About"></section>
-      <section id="PreviousWork">PreviousTest</section>
+      <section id="PreviousWork">
+        <button class="accordion">Work Experience</button>
+          <div class="panel">
+            <p>System Administrator</p>
+            <p>Bakery Maintenance</p>
+            <p>Hotel Maintenance</p>
+          </div>
+          <button class="accordion">Significant Coursework</button>
+          <div class="panel">
+            <p>Algorithms</p>
+            <p>Machine Learning</p>
+            <p>Deep Reinforcement Learning</p>
+            <p>Data Mining</p>
+            <p>Operating Systems</p>
+          </div>
+          <button class="accordion">Programming Languages</button>
+          <div class="panel">
+            <p>C++</p>
+            <p>Java</p>
+            <p>Python</p>
+            <p>C</p>
+          </div>
+      </section>
       <section id="Projects">ProjectsTest</section>
       <section id="Contact">Contact</section>
       </div>
