Added clickable cards to Projects section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <p>C</p>
           </div>
       </section>
-      <section id="Projects">ProjectsTest</section>
+      <section id="Projects">
+        <div id="cardContainer"></div>
+      </section>
       <section id="Contact">
         <div class="container">
           <form id="contactForm">
