--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Isaak Henry</title>
     <link rel="stylesheet" href="styles.css" />
-    <script defer src = "landing.js"></script>
+    <script defer src="landing.js"></script>
   </head>
   <body>
     <main>
@@ -22,26 +23,26 @@
       <section id="About"></section>
       <section id="PreviousWork">
         <button class="accordion">Work Experience</button>
-          <div class="panel">
-            <p>System Administrator</p>
-            <p>Bakery Maintenance</p>
-            <p>Hotel Maintenance</p>
-          </div>
-          <button class="accordion">Significant Coursework</button>
-          <div class="panel">
-            <p>Algorithms</p>
-            <p>Machine Learning</p>
-            <p>Deep Reinforcement Learning</p>
-            <p>Data Mining</p>
-            <p>Operating Systems</p>
-          </div>
-          <button class="accordion">Programming Languages</button>
-          <div class="panel">
-            <p>C++</p>
-            <p>Java</p>
-            <p>Python</p>
-            <p>C</p>
-          </div>
+        <div class="panel">
+          <p>System Administrator</p>
+          <p>Bakery Maintenance</p>
+          <p>Hotel Maintenance</p>
+        </div>
+        <button class="accordion">Significant Coursework</button>
+        <div class="panel">
+          <p>Algorithms</p>
+          <p>Machine Learning</p>
+          <p>Deep Reinforcement Learning</p>
+          <p>Data Mining</p>
+          <p>Operating Systems</p>
+        </div>
+        <button class="accordion">Programming Languages</button>
+        <div class="panel">
+          <p>C++</p>
+          <p>Java</p>
+          <p>Python</p>
+          <p>C</p>
+        </div>
       </section>
       <section id="Projects">
         <div id="cardContainer"></div>
@@ -49,18 +50,35 @@
       <section id="Contact">
         <div class="container">
           <form id="contactForm">
-            <h1 class = "title">Contact</h1>
+            <h1 class="title">Contact</h1>
             <div class="form-group">
               <label for="name">Name:</label>
-              <input type="text" id="name" name="name" autocomplete="name" required>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                autocomplete="name"
+                required
+              />
             </div>
             <div class="form-group">
               <label for="email">Email:</label>
-              <input type="text" id="email" name="email" autocomplete="email" required>
+              <input
+                type="text"
+                id="email"
+                name="email"
+                autocomplete="email"
+                required
+              />
             </div>
             <div class="form-group">
               <label for="message">Message:</label>
-              <textarea id="message" name="message" rows="5" autcomplete="message" required></textarea>
+              <textarea
+                id="message"
+                name="message"
+                rows="5"
+                required
+              ></textarea>
             </div>
             <div class="buttons">
               <input class="submit" type="submit" value="Submit" />
@@ -68,7 +86,6 @@
           </form>
         </div>
       </section>
-      </div>
     </main>
   </body>
 </html>
